Actualizacion - Practicando Herramientas - 29/07/2020 03:17 pm

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,12 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Prueba App
+      Prueba App Encabezado
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+    <h1>Hola</h1>
+    <ion-h1>Prueba de titulo</ion-h1>
+    <p>Prueba de parrafo</p>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Prueba App</ion-title>
@@ -15,3 +18,14 @@
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>
+      Prueba de pie de pagina
+    </ion-title>
+  </ion-toolbar>
+</ion-footer>
+
+<!--
+-->
