--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,46 +8,50 @@
  
 <ion-content [fullscreen]="true">
 
-  <ion-item>
+  
+
+  <ion-item color="warning">
     <ion-label position="floating">No. Reserva</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="warning">
     <ion-label position="floating">Nombres</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="warning">
     <ion-label position="floating">Apellidos</ion-label>
     <ion-input aria-placeholder="Apellidos"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="warning">
     <ion-label position="floating">Pais / Ciudad</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="warning">
     <ion-label position="floating">Direccion</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="warning">
     <ion-label position="floating">Telefono</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
 
 
-  <ion-item>
-    <ion-label position="fixed">Fixed Label</ion-label>
+  <ion-item color="success">
+    <ion-label position="fixed">Probando 1</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
-  <ion-item>
-    <ion-label position="stacked">Stacked Label</ion-label>
+  <ion-item color="danger">
+    <ion-label position="stacked">Probando 2</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
+ 
+  
 </ion-content>
