--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,55 +1,71 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Galeria
+      Tab 2
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
+ 
 <ion-content [fullscreen]="true">
-  
-  <!-- Default textarea -->
-  <ion-textarea></ion-textarea>
+  <!--<form onsubmit="processForm(event)">-->
 
-  <!-- Textarea in an item with a placeholder -->
-  <ion-item>
-    <ion-textarea placeholder="Enter more information here..."></ion-textarea>
-  </ion-item>
+    <ion-item color="warning">
+      <ion-label position="floating">
+        No. Reserva 
+        <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 
-  <!-- Textarea in an item with a floating label -->
-  <ion-item>
-    <ion-label position="floating">Description</ion-label>
-    <ion-textarea></ion-textarea>
-  </ion-item>
+    <ion-item color="warning">
+      <ion-label position="floating">
+        Nombres
+        <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 
-  <!-- Disabled and readonly textarea in an item with a stacked label -->
-  <ion-item>
-    <ion-label position="stacked">Summary</ion-label>
-    <ion-textarea
-      disabled
-      readonly
-      value="Ionic enables developers to build performant, high-quality mobile apps.">
-    </ion-textarea>
-  </ion-item>
+    <ion-item color="warning">
+      <ion-label position="floating">
+        Apellidos
+        <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 
-  <!-- Textarea that clears the value on edit -->
-  <ion-item>
-    <ion-label>Comment</ion-label>
-    <ion-textarea clearOnEdit="true"></ion-textarea>
-  </ion-item>
+    <ion-item color="warning">
+      <ion-label position="floating">
+        Pais / Ciudad
+        <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 
-  <!-- Textarea with custom number of rows and cols -->
-  <ion-item>
-    <ion-label>Notes</ion-label>
-    <ion-textarea rows="6" cols="20" placeholder="Enter any notes here..."></ion-textarea>
-  </ion-item>
+    <ion-item color="warning">
+      <ion-label position="floating">
+        Direccion
+        <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 
+    <ion-item color="warning">
+      <ion-label position="floating">
+        Telefono
+        <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input></ion-input>
+    </ion-item>
 
+    <ion-footer>
+      <ion-toolbar>
+        <div class="ion-padding">
+          <ion-button expand="block" type="submit" class="ion-no-margin">Registrar</ion-button>
+        </div>
+      </ion-toolbar>
+    </ion-footer>
 
+    
 
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button>
-      <ion-icon name="camera" ></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <!--</form>-->
 </ion-content>
