--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,42 +7,43 @@
 </ion-header>
 
 <ion-content>
-  <form  (ngSubmit)="submit()" [formGroup]="registrationForm">
+  
+  <form (ngSubmit)="submit()">
 
     <ion-list>
 
       <ion-item>
         <ion-label position="floating">Name</ion-label>
-        <ion-input formControlName="name" autocapitalize inputmode="text"></ion-input>
+        <ion-input autocapitalize inputmode="text"></ion-input>
       </ion-item>
-      <div ngFor="let error of errorMessages.name">
+      <!-- <div ngFor="let error of errorMessages.name">
         <ng-container *ngIf="name.hasError(error.type) && (name.dirty || name.touched)">
           <small class="error-message">{{error.message}}</small>
         </ng-container>
-      </div>
+      </div> -->
 
       <ion-item>
         <ion-label position="floating">Phone</ion-label>
-        <ion-input formControlName="phone" autocapitalize inputmode="text"></ion-input>
+        <ion-input autocapitalize inputmode="text"></ion-input>
       </ion-item>
-      <div ngFor="let error of errorMessages.phone">
+      <!-- <div ngFor="let error of errorMessages.phone">
         <ng-container *ngIf="phone.hasError(error.type) && (phone.dirty || phone.touched)">
           <small class="error-message">{{error.message}}</small>
         </ng-container>
-      </div>
+      </div> -->
 
       <ion-item>
         <ion-label position="floating">Email</ion-label>
-        <ion-input formControlName="email" autocapitalize inputmode="text"></ion-input>
+        <ion-input autocapitalize inputmode="text"></ion-input>
       </ion-item>
-      <div ngFor="let error of errorMessages.email">
+      <!-- <div ngFor="let error of errorMessages.email">
         <ng-container *ngIf="email.hasError(error.type) && (email.dirty || email.touched)">
           <small class="error-message">{{error.message}}</small>
         </ng-container>
-      </div>
+      </div> -->
 
     </ion-list>
-    <ion-list [formGroupName]="address">
+    <ion-list>
 
       <ion-list-header>
         <ion-label>Address</ion-label>
@@ -50,45 +51,26 @@
 
       <ion-item>
         <ion-label position="floating">Street</ion-label>
-        <ion-input formControlName="street"></ion-input>
+        <ion-input></ion-input>
       </ion-item>
-      <div ngFor="let error of errorMessages.street">
+      <!-- <div ngFor="let error of errorMessages.street">
         <ng-container *ngIf="street.hasError(error.type) && (street.dirty || street.touched)">
-          <small class="error-message">{{error.message}}</small>
+          <small class="error-message">{{error.name.message}}</small>
         </ng-container>
-      </div>
+      </div> -->
 
       <ion-item>
         <ion-label position="floating">City</ion-label>
-        <ion-input formControlName="city"></ion-input>
+        <ion-input></ion-input>
       </ion-item>
-      <div ngFor="let error of errorMessages.city">
+      <!-- <div ngFor="let error of errorMessages.city">
         <ng-container *ngIf="city.hasError(error.type) && (city.dirty || city.touched)">
           <small class="error-message">{{error.message}}</small>
         </ng-container>
-      </div>
+      </div> -->
 
-      <ion-item>
-        <ion-label position="floating">State</ion-label>
-        <ion-input formControlName="state"></ion-input>
-      </ion-item>
-      <div ngFor="let error of errorMessages.state">
-        <ng-container *ngIf="state.hasError(error.type) && (state.dirty || state.touched)">
-          <small class="error-message">{{error.message}}</small>
-        </ng-container>
-      </div>
-
-      <ion-item>
-        <ion-label position="floating">Zip Code</ion-label>
-        <ion-input formControlName="zip"></ion-input>
-      </ion-item>
-      <div ngFor="let error of errorMessages.zip">
-        <ng-container *ngIf="zip.hasError(error.type) && (zip.dirty || zip.touched)">
-          <small class="error-message">{{error.message}}</small>
-        </ng-container>
-      </div>
-
-      <ion-button [disabled]="!registrationForm.valid" type="submit" expand="block">
+      <!-- [disabled]="!registrationForm.valid" -->
+      <ion-button  type="submit" expand="block">
         Submit
         <ion-icon slot="end" name="create"></ion-icon>
       </ion-button>
@@ -96,4 +78,5 @@
 
     </ion-list>
   </form>
+ 
 </ion-content>
